# CiteRAG

./: .env.example  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
cite_rag/: auth.py  chunking.py  db.py  generation.py  retrieval.py  vector_db.py
config/: config.yaml
config/auth/: default.yaml
config/chunking/: default.yaml
config/db/: pinecone.yaml
config/embedding/: gemini.yaml
config/llm/: gemini.yaml
config/logging/: default.yaml
config/postgres/: default.yaml
config/retriever/: default.yaml
styles/: app.css
