[project]
name = "citerag"
version = "0.1.0"
description = "Citation-aware RAG app with PostgreSQL-backed authentication"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cohere>=5.21.1",
    "dotenv>=0.9.9",
    "google-genai>=2.7.0",
    "hydra-core>=1.3.2",
    "langchain>=1.3.2",
    "langchain-classic>=1.0.7",
    "langchain-cohere>=0.5.1",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.4",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.2",
    "omegaconf>=2.3.0",
    "pinecone>=7.3.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
